--- a/index.html
+++ b/index.html
@@ -7,30 +7,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub search</title>
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://unpkg.com/vue@3"></script>
 </head>
 
 <body>
     <div id="app">
         <!-- Favorites -->
         <div class="favorites">
-        </div>
+            <transition-group name="list">
 
+            <div v-for="fav in allfavorites"
+            :class="{'favorite--selected': checkFavorite(fav.login)}"
+                         :key="fav.login">
+                <a @click="putFavOnResult(fav)" target="_blank">
+                    <img :src="fav.avatar_url" alt="" class="favorite__avatar"/>
+                </a>
+            </div>
+        </transition-group>
+
+        </div>
         <!-- Content -->
         <article class="content">
-            <h1 class="content__title">Search GitHub users</h1>
+            <h1 class="content__title">search github users</h1>
 
             <!-- Search -->
-            <form class="search">
-                <input type="text" class="search__input" required placeholder="Search GitHub users">
-                <input type="submit" class="search__submit" value="Search">
+            <form class="search" v-on:submit.prevent="doSearch()">
+                <input v-model="search" type="text" class="search__input" required placeholder="Search GitHub users">
+                <input type="submit" class="search__submit" value="Search" >
             </form>
 
             <!-- Result -->
+          
+<transition>
+    <app-profile 
+    v-if="result" 
+    :result="result"
+    :has-on-favorites="hasOnFavorites" 
+    @add-favorite="addFavorite"
+    @remove-favorite="removeFavorite" />
+    <div v-if="!result">Waiting for search...</div>
+</transition>
+
+
             <!-- Error -->
-            <div class="result__error"></div>
+            <div class="result__error" v-if="error">{{error}}</div>
+
         </article>
     </div>
     <script src="js/main.js"></script>
+    <script src="js/components/AppProfile.js"></script>
+            <script>const mountedApp = app.mount('#app');</script>
 </body>
 
 </html>
